# nested-language

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs  test.rs
src/compiling/: mod.rs  tests.rs
src/parsing/: mod.rs  tests.rs
tests/: bad_root.nl  struct_self_implementation_with_methods.nl  struct_self_implementation_with_methods_and_encapsulations.nl  struct_variable_access_rules.nl  struct_with_empty_self_implementation.nl  struct_with_single_variable.nl  struct_with_single_variable_bad_type.nl  struct_with_single_variable_no_comma.nl  struct_with_two_variables_no_ending_comma.nl  trait_with_methods_and_encapsulators.nl
tests/parsing/: empty_struct_and_trait_with_multi_line_comments.nl  global_functions.nl  single_struct_empty.nl  struct_self_implementation_with_methods.nl  struct_with_single_variable_no_comma.nl  struct_with_two_variables_no_ending_comma.nl
